<resources>
    <!-- APP Settings-->
    <string name="app_name">IDuty</string>

    <string name="google_web_client_id">992118604599-27c6oomluj8q6c1lq9rivr2en9a4f2tt.apps.googleusercontent.com</string>
    <string name="facebook_app_id">1239486142742939</string>
    <string name="redireccionamiento_de_OAuth">https://iduty-87531.firebaseapp.com/__/auth/handler</string>


    <!-- Layouts Titles-->
    <string name="title_activity_main">Main</string>


    <!-- Widgets Texts-->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_settings">Settings</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="et_hint_welcome">Welcome!</string>
    <string name="btn_log_out">Log Out</string>
    <string name="et_hint_email">Email</string>
    <string name="et_hint_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="tv_or">Or</string>
    <string name="et_hint_repeat_password">Repeat Password</string>
    <string name="btn_accept">Accept</string>
    <string name="authentication_failed">Authentication Failed</string>
    <string name="progress_dialog_title">Please wait</string>
    <string name="progress_dialog_message">Loading ...</string>



    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_activity_main2">Main2Activity</string>
    <string name="ic_user_acount">User Account</string>
    <string name="second_menu_side">Session</string>
    <string name="ic_sign_out">Sign Out</string>
    <string name="ic_close_session">Get Out</string>
    <string name="ic_historical">Historical</string>
    <string name="ic_turn">Turns</string>

    <string name="et_hint_first_name">First Name</string>
    <string name="et_hint_second_name">Last Name</string>
    <string name="et_hint_picture">Profile Image</string>
    <string name="et_hint_type">Type</string>
    <string name="et_hint_address">Address</string>
    <string name="et_hint_facebook">Facebook</string>
    <string name="et_hint_id">ID</string>
    <string name="et_hint_age">Age</string>
    <string name="et_hint_tel">Tel</string>
    <string name="et_hint_cel">Cel</string>
</resources>
